<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bidyuk.tasks.sunrisesunset.MainActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_centerInParent="true"
        android:theme="@android:style/Widget.ProgressBar.Small" />
    <LinearLayout
        android:id="@+id/launching_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="60dp"
            android:src="@drawable/logo"
            android:background="@null"/>
        <TextView
            android:id="@+id/choose_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            android:text="@string/chose_tv_text" />
        <Button
            style="@android:style/Widget.Holo.Button.Inset"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="?android:attr/colorMultiSelectHighlight"
            android:text="@string/choose_btn_text"
            android:textColor="#FFFF"
            android:onClick="getPlaceListener"/>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/result_layout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:visibility="invisible">
        <LinearLayout
            android:id="@+id/before_getting_JSON_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerHorizontal="true">
            <TextView
                android:id="@+id/got_place_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_gravity="center_horizontal"/>

            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/showInfo"
                android:background="@color/colorPrimaryDark"
                android:textColor="#FFFF"
                android:onClick="showSunriseListener"/>
        </LinearLayout>
    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerInParent="true"
        android:layout_marginBottom="30dp"
        android:visibility="invisible">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/sunrise"
                android:background="@null"/>
            <TextView
                android:id="@+id/sunrise_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/Sunrise"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/sunset"
                android:background="@android:color/transparent"/>
            <TextView
                android:id="@+id/sunset_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/Sunset"/>
        </LinearLayout>
    </LinearLayout>
        <Button
            android:id="@+id/try_again_btn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/linear_layout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="@string/tryAgain_btn"
            android:background="@android:color/holo_orange_light"
            android:onClick="tryAgainListener"/>
    </RelativeLayout>

</RelativeLayout>
